Support consumer priority
References rabbitmq/rabbitmq-server#11705